Added modifications to index.html

--- a/HTML_BASIC/index.html
+++ b/HTML_BASIC/index.html
@@ -11,9 +11,9 @@
   <h3>My first Webpage</h3>
   <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt velit iure nobis, tempore at ipsum sed nemo maiores eius inventore aliquid nihil. Natus optio praesentium excepturi omnis tempore fugiat.
   </P>
-  <p>welcome to HTML</p>
+  <p>Welcome to coding with HTML</p>
   <P>HTML is coding language used to create websites</P>
   <p>Other coding languages include python, javascript, css etc </p>
-
+<img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
 </body>
 </html>
