Added Tweets.html file

--- a/HTML_BASIC/index.html
+++ b/HTML_BASIC/index.html
@@ -14,6 +14,7 @@
   <p>Welcome to coding with HTML</p>
   <P>HTML is coding language used to create websites</P>
   <p>Other coding languages include python, javascript, css etc </p>
-<img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
+  <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
+  <p>Here is the link for My Tweets page: <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweets</a> </p>
 </body>
 </html>
