--- a/HTML_BASIC/index.html
+++ b/HTML_BASIC/index.html
@@ -16,5 +16,11 @@
   <p>Other coding languages include python, javascript, css etc </p>
   <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
   <p>Here is the link for My Tweets page: <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweets</a> </p>
+  <header>
+    <ul>
+      <li><a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweetspage link</a></li>
+      <li><a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Homepage link</a></li>
+    </ul>
+  </header>
 </body>
 </html>
