--- a/HTML_BASIC/tweets.html
+++ b/HTML_BASIC/tweets.html
@@ -6,9 +6,14 @@
     <title>Document</title>
 </head>
 <body>
- <embed src="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>" type="tweet">
+ <embed src="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>" type="Tweet">
     <p>Here is the home page link:<a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Home</a></p>
-  
+  <header>
+    <ul>
+        <li><a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Homepage link</a></li>
+        <li><a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweetspage link</a></li>
+    </ul>
+ </header>
 </body>
 
 </html>
