--- a/HTML_BASIC/index.html
+++ b/HTML_BASIC/index.html
@@ -6,21 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Hello welcome to HTML learning</h1> 
-  <h2>This is a HTML document</h2> 
-  <h3>My first Webpage</h3>
-  <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt velit iure nobis, tempore at ipsum sed nemo maiores eius inventore aliquid nihil. Natus optio praesentium excepturi omnis tempore fugiat.
-  </P>
-  <p>Welcome to coding with HTML</p>
-  <P>HTML is coding language used to create websites</P>
-  <p>Other coding languages include python, javascript, css etc </p>
-  <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
-  <p>Here is the link for My Tweets page: <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweets</a> </p>
-  <header>
-    <ul>
-      <li><a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweetspage link</a></li>
-      <li><a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Homepage link</a></li>
-    </ul>
-  </header>
+  <main>
+    <article>
+      <h1>Hello welcome to HTML learning</h1> 
+      <h2>This is a HTML document</h2> 
+      <h3>My first Webpage</h3>
+      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sunt velit iure nobis, tempore at ipsum sed nemo maiores eius inventore aliquid nihil. Natus optio praesentium excepturi omnis tempore fugiat.
+      </P>
+      <p>Welcome to coding with HTML</p>
+      <P>HTML is coding language used to create websites</P>
+      <p>Other coding languages include python, javascript, css etc </p>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="A clickable picture">
+      <p>Here is the link for My Tweets page: <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweets</a> </p>
+      <header>
+        <ul>
+          <li><a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweetspage link</a></li>
+          <li><a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Homepage link</a></li>
+        </ul>
+      </header>
+      <aside><p>placeholder to add comment thread later</p></aside>
+    </article>
+  </main>
+  <footer><p>Made by David Mwathi - <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html"target="_blank">here</a></p></footer>
 </body>
 </html>
