--- a/HTML_BASIC/index.html
+++ b/HTML_BASIC/index.html
@@ -25,6 +25,33 @@
         </ul>
       </header>
       <aside><p>placeholder to add comment thread later</p></aside>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Country</th>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>25</td>
+          <td>USA</td>
+        </tr>
+        <tr>
+          <td>Emily</td>
+          <td>28</td>
+          <td>Canada</td>
+        </tr>
+        <tr>
+          <td>Michael</td>
+          <td>32</td>
+          <td>Australia</td>
+        </tr>
+        <tr>
+          <td>Sophia</td>
+          <td>21</td>
+          <td>UK</td>
+        </tr>
+      </table>
     </article>
   </main>
   <footer><p>Made by David Mwathi - <a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html"target="_blank">here</a></p></footer>
