Added changes to index.html file

--- a/HTML_BASIC/portfolio/index.html
+++ b/HTML_BASIC/portfolio/index.html
@@ -46,7 +46,7 @@
    <section>
     <h2>Contact</h2>
     <a href="davidmwathi412@gmail.com"target="_blank">Email link</a>
-    <a href="www.linkedin.com/in/david-njoroge-5b46a0304"target="_blank">Linkedin Link</a>
+    <a href="http://www.linkedin.com/in/david-njoroge-5b46a0304" target="_blank">LinkedIn</a>
     <a href="david052673"target="_blank">Github profile link</a>
    </section>
    <footer>
