--- a/HTML_BASIC/portfolio/index.html
+++ b/HTML_BASIC/portfolio/index.html
@@ -45,9 +45,9 @@
    </section>
    <section>
     <h2>Contact</h2>
-    <a href="davidmwathi412@gmail.com"target="_blank">Email link</a>
+    <a href="http://mwasdaviee411@gmail.com" target="_blank">Email link</a>
     <a href="http://www.linkedin.com/in/david-njoroge-5b46a0304" target="_blank">LinkedIn</a>
-    <a href="david052673"target="_blank">Github profile link</a>
+    <a href="http://david052673" target="_blank">Github Profile link</a>
    </section>
    <footer>
     <p>&copy; 2024 David Mwathi</p>
