Added changes to Index.html file

--- a/HTML_BASIC/portfolio/index.html
+++ b/HTML_BASIC/portfolio/index.html
@@ -45,7 +45,7 @@
    </section>
    <section>
     <h2>Contact</h2>
-    <a href="http://mwasdaviee411@gmail.com" target="_blank">Email link</a>
+    <a href="mailto:http://mwasdaviee411@gmail.com" target="_blank">Email link</a>
     <a href="http://www.linkedin.com/in/david-njoroge-5b46a0304" target="_blank">LinkedIn</a>
     <a href="http://david052673" target="_blank">Github Profile link</a>
    </section>
