--- a/HTML_BASIC/css_basic/index.html
+++ b/HTML_BASIC/css_basic/index.html
@@ -7,9 +7,10 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
     <ul>
+      <li class="logo">®</li>
       <li><a href="http://127.0.0.1:5500/HTML_BASIC/tweets.html">Tweetspage link</a></li>
       <li><a href="http://127.0.0.1:5500/HTML_BASIC/index.html">Homepage link</a></li>
     </ul>
