--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>
+    <title>,Personal Portfolio</title>
+    <title> David Mwathi- Personal Portfolio </title>
 </head>
 <body>
    <header>
