--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,31 +26,35 @@
       </header>
       <aside><p>placeholder to add comment thread later</p></aside>
       <table>
-        <tr>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Country</th>
-        </tr>
-        <tr>
-          <td>John</td>
-          <td>25</td>
-          <td>USA</td>
-        </tr>
-        <tr>
-          <td>Emily</td>
-          <td>28</td>
-          <td>Canada</td>
-        </tr>
-        <tr>
-          <td>Michael</td>
-          <td>32</td>
-          <td>Australia</td>
-        </tr>
-        <tr>
-          <td>Sophia</td>
-          <td>21</td>
-          <td>UK</td>
-        </tr>
+        <thead>
+         <tbody>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+         </tbody>
+        </thead>
       </table>
     </article>
   </main>
